комит 4, тестирование вопросы и ответы

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -22,7 +22,8 @@
     "CLASSES": "Classes",
     "SUBJECTS": "Subjects",
     "TIMETABLE": "Timetable",
-    "ATTENDANCE": "Attendance"
+    "ATTENDANCE": "Attendance",
+    "TESTS": "Tests"
   },
   "AUTH": {
     "LOGIN": "Login",
