--- a/src/assets/i18n/kk.json
+++ b/src/assets/i18n/kk.json
@@ -22,7 +22,8 @@
     "CLASSES": "Сыныптар",
     "SUBJECTS": "Пәндер",
     "TIMETABLE": "Сабақ кестесі",
-    "ATTENDANCE": "Қатысу"
+    "ATTENDANCE": "Қатысу",
+    "TESTS": "Тесттер"
   },
   "AUTH": {
     "LOGIN": "Кіру",
