комит 6, поменял дизайн

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -70,5 +70,90 @@
     "EMAIL": "Please enter a valid email",
     "MIN": "Minimum value: {{min}}",
     "MAX": "Maximum value: {{max}}"
+  },
+  "TEST_FORM": {
+    "TITLE_CREATE": "Create Test",
+    "TITLE_EDIT": "Edit Test",
+    "SUBTITLE": "Build a clear assessment with timing, rules, and options students can follow.",
+    "META": "Basics, settings, schedule, and options in one flow",
+    "STATUS_PUBLISHED": "Published",
+    "STATUS_DRAFT": "Draft",
+    "PUBLISHED_TITLE": "This test is published",
+    "PUBLISHED_MESSAGE": "You cannot edit a published test. To make changes, create a new test.",
+    "SECTION_BASIC_TITLE": "Basic Information",
+    "SECTION_BASIC_SUBTITLE": "Name the test and choose its class and subject",
+    "SECTION_SETTINGS_TITLE": "Test Settings",
+    "SECTION_SETTINGS_SUBTITLE": "Define timing and grading rules",
+    "SECTION_SCHEDULE_TITLE": "Scheduling (Optional)",
+    "SECTION_SCHEDULE_SUBTITLE": "Control when students can start and finish",
+    "SECTION_OPTIONS_TITLE": "Test Options",
+    "SECTION_OPTIONS_SUBTITLE": "Customize question and answer behavior",
+    "FIELD_NAME_LABEL": "Test Name",
+    "FIELD_NAME_PLACEHOLDER": "Enter test name",
+    "FIELD_NAME_ERROR_REQUIRED": "Test name is required",
+    "FIELD_NAME_ERROR_MIN": "Test name must be at least 3 characters",
+    "FIELD_NAME_ERROR_MAX": "Test name must be less than 200 characters",
+    "FIELD_DESC_LABEL": "Description (Optional)",
+    "FIELD_DESC_PLACEHOLDER": "Enter test description",
+    "FIELD_DESC_ERROR_MAX": "Description must be less than 1000 characters",
+    "FIELD_CLASS_LEVEL_LABEL": "Class Level",
+    "FIELD_CLASS_LEVEL_HINT": "Step 1: select class level first",
+    "FIELD_CLASS_LEVEL_REQUIRED": "Class level is required",
+    "FIELD_CLASS_LEVEL_LOADING": "Loading class levels...",
+    "FIELD_SUBJECT_LABEL": "Subject",
+    "FIELD_SUBJECT_EMPTY": "No subjects available for selected class level",
+    "FIELD_SUBJECT_SELECT_CLASS": "Select class level first",
+    "FIELD_SUBJECT_HINT": "Step 2: {{count}} subject(s) available",
+    "FIELD_SUBJECT_WARNING": "Please select class level first (Step 1)",
+    "FIELD_SUBJECT_REQUIRED": "Subject is required",
+    "FIELD_DURATION_LABEL": "Duration (minutes)",
+    "FIELD_DURATION_ERROR": "Duration must be between 1 and 240 minutes",
+    "FIELD_ATTEMPTS_LABEL": "Allowed Attempts",
+    "FIELD_ATTEMPTS_HINT": "How many times students can take this test",
+    "FIELD_ATTEMPTS_ERROR": "Must be between 1 and 10",
+    "FIELD_PASSING_LABEL": "Passing Percentage",
+    "FIELD_PASSING_HINT": "Minimum score to pass the test",
+    "FIELD_PASSING_ERROR": "Must be between 0 and 100",
+    "FIELD_REVIEW_LABEL": "Review Policy",
+    "REVIEW_HINT_AFTER_SUBMIT": "Students can review immediately after submitting",
+    "REVIEW_HINT_AFTER_CLOSE": "Students can review only after test closes",
+    "REVIEW_HINT_NEVER": "Students cannot review their answers",
+    "REVIEW_OPTION_AFTER_SUBMIT": "After Submit",
+    "REVIEW_OPTION_AFTER_CLOSE": "After Close",
+    "REVIEW_OPTION_NEVER": "Never",
+    "FIELD_OPENS_LABEL": "Opens At",
+    "FIELD_OPENS_PLACEHOLDER": "Select date",
+    "FIELD_OPENS_HINT": "When students can start taking the test",
+    "FIELD_CLOSES_LABEL": "Closes At",
+    "FIELD_CLOSES_PLACEHOLDER": "Select date",
+    "FIELD_CLOSES_HINT": "When students can no longer take the test",
+    "OPTION_SHUFFLE_QUESTIONS": "Shuffle Questions",
+    "OPTION_SHUFFLE_QUESTIONS_DESC": "Present questions in random order for each student",
+    "OPTION_SHUFFLE_CHOICES": "Shuffle Answer Choices",
+    "OPTION_SHUFFLE_CHOICES_DESC": "Present answer choices in random order",
+    "ACTION_EDIT_QUESTIONS": "Edit Questions",
+    "ACTION_PUBLISH": "Publish",
+    "ACTION_CANCEL": "Cancel",
+    "ACTION_DELETE": "Delete",
+    "ACTION_CREATE": "Create Test",
+    "ACTION_UPDATE": "Update Test",
+    "ACTION_CREATING": "Creating...",
+    "ACTION_UPDATING": "Updating...",
+    "TOOLTIP_BACK": "Back to list",
+    "TOOLTIP_EDIT_QUESTIONS": "Edit test composition (questions)",
+    "TOOLTIP_PUBLISH": "Publish test (cannot be edited after publishing)",
+    "TOOLTIP_DELETE": "Delete test",
+    "TOOLTIP_DELETE_DISABLED": "Cannot delete - test has student attempts",
+    "NOTIFY_CLASS_LEVELS_FAIL": "Failed to load class levels",
+    "NOTIFY_SUBJECTS_FAIL": "Failed to load subjects",
+    "NOTIFY_TEST_LOAD_FAIL": "Failed to load test",
+    "NOTIFY_PUBLISHED_BLOCK": "Cannot edit published test",
+    "NOTIFY_UPDATE_SUCCESS": "Test updated successfully",
+    "NOTIFY_CREATE_SUCCESS": "Test created successfully",
+    "NOTIFY_PUBLISH_SUCCESS": "Test published successfully",
+    "NOTIFY_DELETE_SUCCESS": "Test deleted successfully",
+    "NOTIFY_DELETE_BLOCK": "Cannot delete test with student attempts",
+    "CONFIRM_PUBLISH": "Publish this test? After publishing, you cannot edit the test composition.",
+    "CONFIRM_DELETE": "Are you sure you want to delete this test? This action cannot be undone."
   }
 }
