--- a/src/assets/i18n/kk.json
+++ b/src/assets/i18n/kk.json
@@ -70,5 +70,90 @@
     "EMAIL": "Дұрыс email енгізіңіз",
     "MIN": "Ең аз мәні: {{min}}",
     "MAX": "Ең көп мәні: {{max}}"
+  },
+  "TEST_FORM": {
+    "TITLE_CREATE": "Тест құру",
+    "TITLE_EDIT": "Тестті өңдеу",
+    "SUBTITLE": "Оқушыларға түсінікті болу үшін уақытын, ережелерін және баптауларын көрсетіңіз.",
+    "META": "Негізгі ақпарат, баптау, кесте және опциялар — бір ағында",
+    "STATUS_PUBLISHED": "Жарияланған",
+    "STATUS_DRAFT": "Жоба",
+    "PUBLISHED_TITLE": "Тест жарияланған",
+    "PUBLISHED_MESSAGE": "Жарияланған тестті өңдеуге болмайды. Өзгерту үшін жаңа тест жасаңыз.",
+    "SECTION_BASIC_TITLE": "Негізгі ақпарат",
+    "SECTION_BASIC_SUBTITLE": "Тест атауын енгізіп, сынып пен пәнді таңдаңыз",
+    "SECTION_SETTINGS_TITLE": "Тест параметрлері",
+    "SECTION_SETTINGS_SUBTITLE": "Уақыты, талпыныс саны және бағалау ережелері",
+    "SECTION_SCHEDULE_TITLE": "Кесте (міндетті емес)",
+    "SECTION_SCHEDULE_SUBTITLE": "Оқушылар тестті қашан бастай/аяқтай алады",
+    "SECTION_OPTIONS_TITLE": "Тест опциялары",
+    "SECTION_OPTIONS_SUBTITLE": "Сұрақтар мен жауаптардың көрсетілуін баптау",
+    "FIELD_NAME_LABEL": "Тест атауы",
+    "FIELD_NAME_PLACEHOLDER": "Тест атауын енгізіңіз",
+    "FIELD_NAME_ERROR_REQUIRED": "Тест атауы міндетті",
+    "FIELD_NAME_ERROR_MIN": "Тест атауы кемінде 3 таңба болуы керек",
+    "FIELD_NAME_ERROR_MAX": "Тест атауы 200 таңбадан аспауы керек",
+    "FIELD_DESC_LABEL": "Сипаттама (міндетті емес)",
+    "FIELD_DESC_PLACEHOLDER": "Тест сипаттамасын енгізіңіз",
+    "FIELD_DESC_ERROR_MAX": "Сипаттама 1000 таңбадан аспауы керек",
+    "FIELD_CLASS_LEVEL_LABEL": "Сынып",
+    "FIELD_CLASS_LEVEL_HINT": "1-қадам: алдымен сыныпты таңдаңыз",
+    "FIELD_CLASS_LEVEL_REQUIRED": "Сынып міндетті",
+    "FIELD_CLASS_LEVEL_LOADING": "Сыныптар жүктелуде...",
+    "FIELD_SUBJECT_LABEL": "Пән",
+    "FIELD_SUBJECT_EMPTY": "Таңдалған сынып үшін пәндер жоқ",
+    "FIELD_SUBJECT_SELECT_CLASS": "Алдымен сыныпты таңдаңыз",
+    "FIELD_SUBJECT_HINT": "2-қадам: қолжетімді пәндер саны — {{count}}",
+    "FIELD_SUBJECT_WARNING": "Алдымен сыныпты таңдаңыз (1-қадам)",
+    "FIELD_SUBJECT_REQUIRED": "Пән міндетті",
+    "FIELD_DURATION_LABEL": "Ұзақтығы (мин)",
+    "FIELD_DURATION_ERROR": "Ұзақтығы 1 мен 240 минут аралығында болуы керек",
+    "FIELD_ATTEMPTS_LABEL": "Талпыныс саны",
+    "FIELD_ATTEMPTS_HINT": "Оқушы тестті неше рет тапсыра алады",
+    "FIELD_ATTEMPTS_ERROR": "1 мен 10 аралығы",
+    "FIELD_PASSING_LABEL": "Өту пайызы",
+    "FIELD_PASSING_HINT": "Тесті өту үшін ең төменгі пайыз",
+    "FIELD_PASSING_ERROR": "0 мен 100 аралығы",
+    "FIELD_REVIEW_LABEL": "Нәтижені қарау",
+    "REVIEW_HINT_AFTER_SUBMIT": "Жібергеннен кейін бірден қарай алады",
+    "REVIEW_HINT_AFTER_CLOSE": "Тест жабылғаннан кейін ғана қарай алады",
+    "REVIEW_HINT_NEVER": "Жауаптарды көре алмайды",
+    "REVIEW_OPTION_AFTER_SUBMIT": "Жібергеннен кейін",
+    "REVIEW_OPTION_AFTER_CLOSE": "Жабылғаннан кейін",
+    "REVIEW_OPTION_NEVER": "Ешқашан",
+    "FIELD_OPENS_LABEL": "Ашылу уақыты",
+    "FIELD_OPENS_PLACEHOLDER": "Күнін таңдаңыз",
+    "FIELD_OPENS_HINT": "Оқушылар тестті қашан бастай алады",
+    "FIELD_CLOSES_LABEL": "Жабылу уақыты",
+    "FIELD_CLOSES_PLACEHOLDER": "Күнін таңдаңыз",
+    "FIELD_CLOSES_HINT": "Оқушылар тестті қашан аяқтай алмайды",
+    "OPTION_SHUFFLE_QUESTIONS": "Сұрақтарды араластыру",
+    "OPTION_SHUFFLE_QUESTIONS_DESC": "Сұрақтарды кездейсоқ ретпен көрсету",
+    "OPTION_SHUFFLE_CHOICES": "Жауап нұсқаларын араластыру",
+    "OPTION_SHUFFLE_CHOICES_DESC": "Жауап нұсқаларын кездейсоқ ретпен көрсету",
+    "ACTION_EDIT_QUESTIONS": "Сұрақтарды өңдеу",
+    "ACTION_PUBLISH": "Жариялау",
+    "ACTION_CANCEL": "Бас тарту",
+    "ACTION_DELETE": "Жою",
+    "ACTION_CREATE": "Тест құру",
+    "ACTION_UPDATE": "Тестті жаңарту",
+    "ACTION_CREATING": "Құрылуда...",
+    "ACTION_UPDATING": "Жаңартылуда...",
+    "TOOLTIP_BACK": "Тізімге оралу",
+    "TOOLTIP_EDIT_QUESTIONS": "Тест құрамын өңдеу (сұрақтар)",
+    "TOOLTIP_PUBLISH": "Тестті жариялау (кейін өңдеу мүмкін емес)",
+    "TOOLTIP_DELETE": "Тестті жою",
+    "TOOLTIP_DELETE_DISABLED": "Жоюға болмайды — тапсыру әрекеттері бар",
+    "NOTIFY_CLASS_LEVELS_FAIL": "Сыныптар жүктелмеді",
+    "NOTIFY_SUBJECTS_FAIL": "Пәндер жүктелмеді",
+    "NOTIFY_TEST_LOAD_FAIL": "Тест жүктелмеді",
+    "NOTIFY_PUBLISHED_BLOCK": "Жарияланған тестті өңдеуге болмайды",
+    "NOTIFY_UPDATE_SUCCESS": "Тест сәтті жаңартылды",
+    "NOTIFY_CREATE_SUCCESS": "Тест сәтті құрылды",
+    "NOTIFY_PUBLISH_SUCCESS": "Тест сәтті жарияланды",
+    "NOTIFY_DELETE_SUCCESS": "Тест жойылды",
+    "NOTIFY_DELETE_BLOCK": "Тапсыру әрекеттері бар тестті жоюға болмайды",
+    "CONFIRM_PUBLISH": "Тестті жариялайсыз ба? Жарияланғаннан кейін тест құрамын өңдей алмайсыз.",
+    "CONFIRM_DELETE": "Тестті жоясыз ба? Бұл әрекетті болдырмауға болмайды."
   }
 }
