--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -70,5 +70,90 @@
     "EMAIL": "Введите корректный email",
     "MIN": "Минимальное значение: {{min}}",
     "MAX": "Максимальное значение: {{max}}"
+  },
+  "TEST_FORM": {
+    "TITLE_CREATE": "Создать тест",
+    "TITLE_EDIT": "Редактировать тест",
+    "SUBTITLE": "Соберите понятный тест с правилами, временем и настройками для учеников.",
+    "META": "Основное, настройки, расписание и опции — в одном потоке",
+    "STATUS_PUBLISHED": "Опубликован",
+    "STATUS_DRAFT": "Черновик",
+    "PUBLISHED_TITLE": "Тест опубликован",
+    "PUBLISHED_MESSAGE": "Нельзя редактировать опубликованный тест. Чтобы внести изменения, создайте новый тест.",
+    "SECTION_BASIC_TITLE": "Основная информация",
+    "SECTION_BASIC_SUBTITLE": "Название теста и выбор класса и предмета",
+    "SECTION_SETTINGS_TITLE": "Параметры теста",
+    "SECTION_SETTINGS_SUBTITLE": "Время, попытки и правила оценки",
+    "SECTION_SCHEDULE_TITLE": "Расписание (необязательно)",
+    "SECTION_SCHEDULE_SUBTITLE": "Когда ученики могут начать и завершить тест",
+    "SECTION_OPTIONS_TITLE": "Опции теста",
+    "SECTION_OPTIONS_SUBTITLE": "Настройка поведения вопросов и ответов",
+    "FIELD_NAME_LABEL": "Название теста",
+    "FIELD_NAME_PLACEHOLDER": "Введите название теста",
+    "FIELD_NAME_ERROR_REQUIRED": "Название теста обязательно",
+    "FIELD_NAME_ERROR_MIN": "Название теста должно быть не короче 3 символов",
+    "FIELD_NAME_ERROR_MAX": "Название теста должно быть короче 200 символов",
+    "FIELD_DESC_LABEL": "Описание (необязательно)",
+    "FIELD_DESC_PLACEHOLDER": "Введите описание теста",
+    "FIELD_DESC_ERROR_MAX": "Описание должно быть короче 1000 символов",
+    "FIELD_CLASS_LEVEL_LABEL": "Класс",
+    "FIELD_CLASS_LEVEL_HINT": "Шаг 1: сначала выберите класс",
+    "FIELD_CLASS_LEVEL_REQUIRED": "Класс обязателен",
+    "FIELD_CLASS_LEVEL_LOADING": "Загрузка классов...",
+    "FIELD_SUBJECT_LABEL": "Предмет",
+    "FIELD_SUBJECT_EMPTY": "Нет предметов для выбранного класса",
+    "FIELD_SUBJECT_SELECT_CLASS": "Сначала выберите класс",
+    "FIELD_SUBJECT_HINT": "Шаг 2: доступно предметов: {{count}}",
+    "FIELD_SUBJECT_WARNING": "Пожалуйста, сначала выберите класс (Шаг 1)",
+    "FIELD_SUBJECT_REQUIRED": "Предмет обязателен",
+    "FIELD_DURATION_LABEL": "Длительность (мин)",
+    "FIELD_DURATION_ERROR": "Длительность должна быть от 1 до 240 минут",
+    "FIELD_ATTEMPTS_LABEL": "Количество попыток",
+    "FIELD_ATTEMPTS_HINT": "Сколько раз ученик может пройти тест",
+    "FIELD_ATTEMPTS_ERROR": "Допустимо от 1 до 10",
+    "FIELD_PASSING_LABEL": "Проходной процент",
+    "FIELD_PASSING_HINT": "Минимальный процент для зачета",
+    "FIELD_PASSING_ERROR": "Допустимо от 0 до 100",
+    "FIELD_REVIEW_LABEL": "Просмотр результатов",
+    "REVIEW_HINT_AFTER_SUBMIT": "Ученик видит ответы сразу после отправки",
+    "REVIEW_HINT_AFTER_CLOSE": "Ученик видит ответы только после закрытия теста",
+    "REVIEW_HINT_NEVER": "Ученик не видит ответы",
+    "REVIEW_OPTION_AFTER_SUBMIT": "После отправки",
+    "REVIEW_OPTION_AFTER_CLOSE": "После закрытия",
+    "REVIEW_OPTION_NEVER": "Никогда",
+    "FIELD_OPENS_LABEL": "Открывается",
+    "FIELD_OPENS_PLACEHOLDER": "Выберите дату",
+    "FIELD_OPENS_HINT": "Когда ученики могут начать тест",
+    "FIELD_CLOSES_LABEL": "Закрывается",
+    "FIELD_CLOSES_PLACEHOLDER": "Выберите дату",
+    "FIELD_CLOSES_HINT": "Когда ученики не смогут пройти тест",
+    "OPTION_SHUFFLE_QUESTIONS": "Перемешать вопросы",
+    "OPTION_SHUFFLE_QUESTIONS_DESC": "Показывать вопросы в случайном порядке",
+    "OPTION_SHUFFLE_CHOICES": "Перемешать варианты ответа",
+    "OPTION_SHUFFLE_CHOICES_DESC": "Показывать варианты ответа в случайном порядке",
+    "ACTION_EDIT_QUESTIONS": "Редактировать вопросы",
+    "ACTION_PUBLISH": "Опубликовать",
+    "ACTION_CANCEL": "Отмена",
+    "ACTION_DELETE": "Удалить",
+    "ACTION_CREATE": "Создать тест",
+    "ACTION_UPDATE": "Обновить тест",
+    "ACTION_CREATING": "Создание...",
+    "ACTION_UPDATING": "Обновление...",
+    "TOOLTIP_BACK": "Назад к списку",
+    "TOOLTIP_EDIT_QUESTIONS": "Редактировать состав теста (вопросы)",
+    "TOOLTIP_PUBLISH": "Опубликовать тест (после публикации редактирование недоступно)",
+    "TOOLTIP_DELETE": "Удалить тест",
+    "TOOLTIP_DELETE_DISABLED": "Нельзя удалить — есть попытки",
+    "NOTIFY_CLASS_LEVELS_FAIL": "Не удалось загрузить классы",
+    "NOTIFY_SUBJECTS_FAIL": "Не удалось загрузить предметы",
+    "NOTIFY_TEST_LOAD_FAIL": "Не удалось загрузить тест",
+    "NOTIFY_PUBLISHED_BLOCK": "Нельзя редактировать опубликованный тест",
+    "NOTIFY_UPDATE_SUCCESS": "Тест успешно обновлен",
+    "NOTIFY_CREATE_SUCCESS": "Тест успешно создан",
+    "NOTIFY_PUBLISH_SUCCESS": "Тест успешно опубликован",
+    "NOTIFY_DELETE_SUCCESS": "Тест удален",
+    "NOTIFY_DELETE_BLOCK": "Нельзя удалить тест с попытками",
+    "CONFIRM_PUBLISH": "Опубликовать тест? После публикации нельзя редактировать состав теста.",
+    "CONFIRM_DELETE": "Удалить тест? Это действие нельзя отменить."
   }
 }
