комит 8 - рефакторинг назначения тестов на классы

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -132,6 +132,31 @@
     "MIN": "Minimum value: {{min}}",
     "MAX": "Maximum value: {{max}}"
   },
+  "TEST": {
+    "TITLE_SINGULAR": "Test",
+    "STATUS_PUBLISHED": "Published",
+    "STATUS_DRAFT": "Draft",
+    "SUBJECT": "Subject",
+    "GRADE": "Grade",
+    "GRADE_VALUE": "Grade {{grade}}",
+    "DURATION": "Duration",
+    "ALLOWED_ATTEMPTS": "Allowed Attempts",
+    "PASSING_PERCENT": "Passing Percentage",
+    "REVIEW_POLICY": "Review Policy",
+    "REVIEW_AFTER_SUBMIT": "After Submit",
+    "REVIEW_AFTER_CLOSE": "After Close",
+    "REVIEW_NEVER": "Never",
+    "OPENS_AT": "Opens At",
+    "CLOSES_AT": "Closes At",
+    "OPTIONS": "Options",
+    "SHUFFLE_QUESTIONS": "Shuffle Questions",
+    "SHUFFLE_CHOICES": "Shuffle Answer Choices",
+    "QUESTIONS_TITLE": "Questions",
+    "NO_QUESTIONS": "No questions added",
+    "MANAGE_QUESTIONS": "Manage Questions",
+    "ORDER": "Order",
+    "WEIGHT": "Weight"
+  },
   "TEST_FORM": {
     "TITLE_CREATE": "Create Test",
     "TITLE_EDIT": "Edit Test",
@@ -157,16 +182,14 @@
     "FIELD_DESC_LABEL": "Description (Optional)",
     "FIELD_DESC_PLACEHOLDER": "Enter test description",
     "FIELD_DESC_ERROR_MAX": "Description must be less than 1000 characters",
-    "FIELD_CLASS_LEVEL_LABEL": "Class Level",
-    "FIELD_CLASS_LEVEL_HINT": "Step 1: select class level first",
-    "FIELD_CLASS_LEVEL_REQUIRED": "Class level is required",
-    "FIELD_CLASS_LEVEL_LOADING": "Loading class levels...",
     "FIELD_SUBJECT_LABEL": "Subject",
-    "FIELD_SUBJECT_EMPTY": "No subjects available for selected class level",
-    "FIELD_SUBJECT_SELECT_CLASS": "Select class level first",
-    "FIELD_SUBJECT_HINT": "Step 2: {{count}} subject(s) available",
-    "FIELD_SUBJECT_WARNING": "Please select class level first (Step 1)",
+    "FIELD_SUBJECT_LOADING": "Loading subjects...",
+    "FIELD_SUBJECT_HINT_NEW": "Step 1: select subject for the test",
     "FIELD_SUBJECT_REQUIRED": "Subject is required",
+    "FIELD_SCHOOL_CLASSES_LABEL": "Classes",
+    "FIELD_SCHOOL_CLASSES_HINT": "Step 2: select one or more classes (e.g., 9A, 9B, 9C)",
+    "FIELD_SCHOOL_CLASSES_REQUIRED": "At least one class must be selected",
+    "FIELD_SCHOOL_CLASSES_LOADING": "Loading classes...",
     "FIELD_DURATION_LABEL": "Duration (minutes)",
     "FIELD_DURATION_ERROR": "Duration must be between 1 and 240 minutes",
     "FIELD_ATTEMPTS_LABEL": "Allowed Attempts",
@@ -183,11 +206,22 @@
     "REVIEW_OPTION_AFTER_CLOSE": "After Close",
     "REVIEW_OPTION_NEVER": "Never",
     "FIELD_OPENS_LABEL": "Opens At",
+    "FIELD_OPENS_DATE_LABEL": "Opening Date",
     "FIELD_OPENS_PLACEHOLDER": "Select date",
+    "FIELD_OPENS_DATE_HINT": "When students can start taking the test",
     "FIELD_OPENS_HINT": "When students can start taking the test",
+    "FIELD_OPENS_TIME_LABEL": "Opening Time",
+    "FIELD_OPENS_TIME_PLACEHOLDER": "14:00",
+    "FIELD_OPENS_TIME_HINT": "Specify test start time",
     "FIELD_CLOSES_LABEL": "Closes At",
+    "FIELD_CLOSES_DATE_LABEL": "Closing Date",
     "FIELD_CLOSES_PLACEHOLDER": "Select date",
+    "FIELD_CLOSES_DATE_HINT": "When test closes for submission",
     "FIELD_CLOSES_HINT": "When students can no longer take the test",
+    "FIELD_CLOSES_TIME_LABEL": "Closing Time",
+    "FIELD_CLOSES_TIME_PLACEHOLDER": "15:00",
+    "FIELD_CLOSES_TIME_HINT": "Specify test closing time",
+    "SCHEDULE_ERROR": "Closing time must be at least the test duration after opening time",
     "OPTION_SHUFFLE_QUESTIONS": "Shuffle Questions",
     "OPTION_SHUFFLE_QUESTIONS_DESC": "Present questions in random order for each student",
     "OPTION_SHUFFLE_CHOICES": "Shuffle Answer Choices",
@@ -205,7 +239,7 @@
     "TOOLTIP_PUBLISH": "Publish test (cannot be edited after publishing)",
     "TOOLTIP_DELETE": "Delete test",
     "TOOLTIP_DELETE_DISABLED": "Cannot delete - test has student attempts",
-    "NOTIFY_CLASS_LEVELS_FAIL": "Failed to load class levels",
+    "NOTIFY_SCHOOL_CLASSES_FAIL": "Failed to load classes",
     "NOTIFY_SUBJECTS_FAIL": "Failed to load subjects",
     "NOTIFY_TEST_LOAD_FAIL": "Failed to load test",
     "NOTIFY_PUBLISHED_BLOCK": "Cannot edit published test",
