--- a/src/assets/i18n/kk.json
+++ b/src/assets/i18n/kk.json
@@ -132,6 +132,31 @@
     "MIN": "Ең аз мәні: {{min}}",
     "MAX": "Ең көп мәні: {{max}}"
   },
+  "TEST": {
+    "TITLE_SINGULAR": "Тест",
+    "STATUS_PUBLISHED": "Жарияланған",
+    "STATUS_DRAFT": "Жоба",
+    "SUBJECT": "Пән",
+    "GRADE": "Сынып",
+    "GRADE_VALUE": "{{grade}} сынып",
+    "DURATION": "Ұзақтығы",
+    "ALLOWED_ATTEMPTS": "Рұқсат етілген әрекеттер",
+    "PASSING_PERCENT": "Өту пайызы",
+    "REVIEW_POLICY": "Қарау саясаты",
+    "REVIEW_AFTER_SUBMIT": "Жібергеннен кейін",
+    "REVIEW_AFTER_CLOSE": "Жабылғаннан кейін",
+    "REVIEW_NEVER": "Ешқашан",
+    "OPENS_AT": "Ашылады",
+    "CLOSES_AT": "Жабылады",
+    "OPTIONS": "Опциялар",
+    "SHUFFLE_QUESTIONS": "Сұрақтарды араластыру",
+    "SHUFFLE_CHOICES": "Жауап нұсқаларын араластыру",
+    "QUESTIONS_TITLE": "Сұрақтар",
+    "NO_QUESTIONS": "Сұрақтар қосылмаған",
+    "MANAGE_QUESTIONS": "Сұрақтарды басқару",
+    "ORDER": "Реті",
+    "WEIGHT": "Салмағы"
+  },
   "TEST_FORM": {
     "TITLE_CREATE": "Тест құру",
     "TITLE_EDIT": "Тестті өңдеу",
@@ -157,16 +182,14 @@
     "FIELD_DESC_LABEL": "Сипаттама (міндетті емес)",
     "FIELD_DESC_PLACEHOLDER": "Тест сипаттамасын енгізіңіз",
     "FIELD_DESC_ERROR_MAX": "Сипаттама 1000 таңбадан аспауы керек",
-    "FIELD_CLASS_LEVEL_LABEL": "Сынып",
-    "FIELD_CLASS_LEVEL_HINT": "1-қадам: алдымен сыныпты таңдаңыз",
-    "FIELD_CLASS_LEVEL_REQUIRED": "Сынып міндетті",
-    "FIELD_CLASS_LEVEL_LOADING": "Сыныптар жүктелуде...",
     "FIELD_SUBJECT_LABEL": "Пән",
-    "FIELD_SUBJECT_EMPTY": "Таңдалған сынып үшін пәндер жоқ",
-    "FIELD_SUBJECT_SELECT_CLASS": "Алдымен сыныпты таңдаңыз",
-    "FIELD_SUBJECT_HINT": "2-қадам: қолжетімді пәндер саны — {{count}}",
-    "FIELD_SUBJECT_WARNING": "Алдымен сыныпты таңдаңыз (1-қадам)",
+    "FIELD_SUBJECT_LOADING": "Пәндер жүктелуде...",
+    "FIELD_SUBJECT_HINT_NEW": "1-қадам: тест үшін пәнді таңдаңыз",
     "FIELD_SUBJECT_REQUIRED": "Пән міндетті",
+    "FIELD_SCHOOL_CLASSES_LABEL": "Сыныптар",
+    "FIELD_SCHOOL_CLASSES_HINT": "2-қадам: бір немесе бірнеше сыныпты таңдаңыз (мысалы, 9А, 9Б, 9В)",
+    "FIELD_SCHOOL_CLASSES_REQUIRED": "Кемінде бір сыныпты таңдау қажет",
+    "FIELD_SCHOOL_CLASSES_LOADING": "Сыныптар жүктелуде...",
     "FIELD_DURATION_LABEL": "Ұзақтығы (мин)",
     "FIELD_DURATION_ERROR": "Ұзақтығы 1 мен 240 минут аралығында болуы керек",
     "FIELD_ATTEMPTS_LABEL": "Талпыныс саны",
@@ -183,11 +206,22 @@
     "REVIEW_OPTION_AFTER_CLOSE": "Жабылғаннан кейін",
     "REVIEW_OPTION_NEVER": "Ешқашан",
     "FIELD_OPENS_LABEL": "Ашылу уақыты",
+    "FIELD_OPENS_DATE_LABEL": "Ашылу күні",
     "FIELD_OPENS_PLACEHOLDER": "Күнін таңдаңыз",
+    "FIELD_OPENS_DATE_HINT": "Оқушылар тестті қашан бастай алады",
     "FIELD_OPENS_HINT": "Оқушылар тестті қашан бастай алады",
+    "FIELD_OPENS_TIME_LABEL": "Ашылу уақыты",
+    "FIELD_OPENS_TIME_PLACEHOLDER": "14:00",
+    "FIELD_OPENS_TIME_HINT": "Тест басталу уақытын көрсетіңіз",
     "FIELD_CLOSES_LABEL": "Жабылу уақыты",
+    "FIELD_CLOSES_DATE_LABEL": "Жабылу күні",
     "FIELD_CLOSES_PLACEHOLDER": "Күнін таңдаңыз",
+    "FIELD_CLOSES_DATE_HINT": "Тест жабылатын уақыт",
     "FIELD_CLOSES_HINT": "Оқушылар тестті қашан аяқтай алмайды",
+    "FIELD_CLOSES_TIME_LABEL": "Жабылу уақыты",
+    "FIELD_CLOSES_TIME_PLACEHOLDER": "15:00",
+    "FIELD_CLOSES_TIME_HINT": "Тест жабылу уақытын көрсетіңіз",
+    "SCHEDULE_ERROR": "Жабылу уақыты ашылу уақытынан кейін кемінде тест ұзақтығынан кейін болуы керек",
     "OPTION_SHUFFLE_QUESTIONS": "Сұрақтарды араластыру",
     "OPTION_SHUFFLE_QUESTIONS_DESC": "Сұрақтарды кездейсоқ ретпен көрсету",
     "OPTION_SHUFFLE_CHOICES": "Жауап нұсқаларын араластыру",
@@ -205,7 +239,7 @@
     "TOOLTIP_PUBLISH": "Тестті жариялау (кейін өңдеу мүмкін емес)",
     "TOOLTIP_DELETE": "Тестті жою",
     "TOOLTIP_DELETE_DISABLED": "Жоюға болмайды — тапсыру әрекеттері бар",
-    "NOTIFY_CLASS_LEVELS_FAIL": "Сыныптар жүктелмеді",
+    "NOTIFY_SCHOOL_CLASSES_FAIL": "Сыныптар жүктелмеді",
     "NOTIFY_SUBJECTS_FAIL": "Пәндер жүктелмеді",
     "NOTIFY_TEST_LOAD_FAIL": "Тест жүктелмеді",
     "NOTIFY_PUBLISHED_BLOCK": "Жарияланған тестті өңдеуге болмайды",
