--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -132,6 +132,31 @@
     "MIN": "Минимальное значение: {{min}}",
     "MAX": "Максимальное значение: {{max}}"
   },
+  "TEST": {
+    "TITLE_SINGULAR": "Тест",
+    "STATUS_PUBLISHED": "Опубликован",
+    "STATUS_DRAFT": "Черновик",
+    "SUBJECT": "Предмет",
+    "GRADE": "Класс",
+    "GRADE_VALUE": "Класс {{grade}}",
+    "DURATION": "Продолжительность",
+    "ALLOWED_ATTEMPTS": "Разрешённые попытки",
+    "PASSING_PERCENT": "Проходной балл",
+    "REVIEW_POLICY": "Политика просмотра",
+    "REVIEW_AFTER_SUBMIT": "После отправки",
+    "REVIEW_AFTER_CLOSE": "После закрытия",
+    "REVIEW_NEVER": "Никогда",
+    "OPENS_AT": "Открывается",
+    "CLOSES_AT": "Закрывается",
+    "OPTIONS": "Опции",
+    "SHUFFLE_QUESTIONS": "Перемешать вопросы",
+    "SHUFFLE_CHOICES": "Перемешать варианты ответа",
+    "QUESTIONS_TITLE": "Вопросы",
+    "NO_QUESTIONS": "Вопросы не добавлены",
+    "MANAGE_QUESTIONS": "Управлять вопросами",
+    "ORDER": "Порядок",
+    "WEIGHT": "Вес"
+  },
   "TEST_FORM": {
     "TITLE_CREATE": "Создать тест",
     "TITLE_EDIT": "Редактировать тест",
@@ -157,16 +182,14 @@
     "FIELD_DESC_LABEL": "Описание (необязательно)",
     "FIELD_DESC_PLACEHOLDER": "Введите описание теста",
     "FIELD_DESC_ERROR_MAX": "Описание должно быть короче 1000 символов",
-    "FIELD_CLASS_LEVEL_LABEL": "Класс",
-    "FIELD_CLASS_LEVEL_HINT": "Шаг 1: сначала выберите класс",
-    "FIELD_CLASS_LEVEL_REQUIRED": "Класс обязателен",
-    "FIELD_CLASS_LEVEL_LOADING": "Загрузка классов...",
     "FIELD_SUBJECT_LABEL": "Предмет",
-    "FIELD_SUBJECT_EMPTY": "Нет предметов для выбранного класса",
-    "FIELD_SUBJECT_SELECT_CLASS": "Сначала выберите класс",
-    "FIELD_SUBJECT_HINT": "Шаг 2: доступно предметов: {{count}}",
-    "FIELD_SUBJECT_WARNING": "Пожалуйста, сначала выберите класс (Шаг 1)",
+    "FIELD_SUBJECT_LOADING": "Загрузка предметов...",
+    "FIELD_SUBJECT_HINT_NEW": "Шаг 1: выберите предмет для теста",
     "FIELD_SUBJECT_REQUIRED": "Предмет обязателен",
+    "FIELD_SCHOOL_CLASSES_LABEL": "Классы",
+    "FIELD_SCHOOL_CLASSES_HINT": "Шаг 2: выберите один или несколько классов (например, 9А, 9Б, 9В)",
+    "FIELD_SCHOOL_CLASSES_REQUIRED": "Необходимо выбрать хотя бы один класс",
+    "FIELD_SCHOOL_CLASSES_LOADING": "Загрузка классов...",
     "FIELD_DURATION_LABEL": "Длительность (мин)",
     "FIELD_DURATION_ERROR": "Длительность должна быть от 1 до 240 минут",
     "FIELD_ATTEMPTS_LABEL": "Количество попыток",
@@ -183,11 +206,22 @@
     "REVIEW_OPTION_AFTER_CLOSE": "После закрытия",
     "REVIEW_OPTION_NEVER": "Никогда",
     "FIELD_OPENS_LABEL": "Открывается",
+    "FIELD_OPENS_DATE_LABEL": "Дата открытия",
     "FIELD_OPENS_PLACEHOLDER": "Выберите дату",
+    "FIELD_OPENS_DATE_HINT": "Когда ученики могут начать тест",
     "FIELD_OPENS_HINT": "Когда ученики могут начать тест",
+    "FIELD_OPENS_TIME_LABEL": "Время открытия",
+    "FIELD_OPENS_TIME_PLACEHOLDER": "14:00",
+    "FIELD_OPENS_TIME_HINT": "Укажите время начала теста",
     "FIELD_CLOSES_LABEL": "Закрывается",
+    "FIELD_CLOSES_DATE_LABEL": "Дата закрытия",
     "FIELD_CLOSES_PLACEHOLDER": "Выберите дату",
+    "FIELD_CLOSES_DATE_HINT": "Когда тест закроется для прохождения",
     "FIELD_CLOSES_HINT": "Когда ученики не смогут пройти тест",
+    "FIELD_CLOSES_TIME_LABEL": "Время закрытия",
+    "FIELD_CLOSES_TIME_PLACEHOLDER": "15:00",
+    "FIELD_CLOSES_TIME_HINT": "Укажите время закрытия теста",
+    "SCHEDULE_ERROR": "Время закрытия должно быть не меньше длительности теста после времени открытия",
     "OPTION_SHUFFLE_QUESTIONS": "Перемешать вопросы",
     "OPTION_SHUFFLE_QUESTIONS_DESC": "Показывать вопросы в случайном порядке",
     "OPTION_SHUFFLE_CHOICES": "Перемешать варианты ответа",
@@ -205,7 +239,7 @@
     "TOOLTIP_PUBLISH": "Опубликовать тест (после публикации редактирование недоступно)",
     "TOOLTIP_DELETE": "Удалить тест",
     "TOOLTIP_DELETE_DISABLED": "Нельзя удалить — есть попытки",
-    "NOTIFY_CLASS_LEVELS_FAIL": "Не удалось загрузить классы",
+    "NOTIFY_SCHOOL_CLASSES_FAIL": "Не удалось загрузить классы",
     "NOTIFY_SUBJECTS_FAIL": "Не удалось загрузить предметы",
     "NOTIFY_TEST_LOAD_FAIL": "Не удалось загрузить тест",
     "NOTIFY_PUBLISHED_BLOCK": "Нельзя редактировать опубликованный тест",
